fix: 发布 Bug 修复